@@ -21,9 +21,9 @@ import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
 public class CodeGenService {
-  private EntityService entityService = new EntityService();
-  private DataModelService dataModelService = new DataModelService();
-  private CodeGenRepository codeGenRepository = new CodeGenRepository();
+  private final EntityService entityService = new EntityService();
+  private final DataModelService dataModelService = new DataModelService();
+  private final CodeGenRepository codeGenRepository = new CodeGenRepository();
 
   public List<String> getCodeTemplateList() {
     return codeGenRepository.getCodeTemplateList();
@@ -71,7 +71,7 @@ public class CodeGenService {
     } catch (IOException e) {
       return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Unable to create zip:" + e.getMessage());
     }
-    String filename = models.get(0).getName() + " " + LocalDate.now();
+    String filename = models.getFirst().getName() + " " + LocalDate.now();
     HttpHeaders headers = new HttpHeaders();
     headers.setContentType(new MediaType("application", "force-download"));
     headers.set(HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=\"" + filename + ".txt\"");
